bpo-31723: Fix refleaks when zipimporter.__init__() is called more than once (GH-3919)